# kedro-repo-goto

./: README.md  https---github.com-kedro-org-awesome-kedro-tab=readme-ov-file.url  pyproject.toml  requirements.txt
src/kedro_repo/: __init__.py  __main__.py  settings.py
src/kedro_repo/pipelines/data_processing/: pipeline.py
src/kedro_repo/pipelines/data_science/: __init__.py
