[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"


[project]
requires-python = ">=3.10"
name = "kedro_repo"
readme = "README.md"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}


[project.scripts]
kedro-repo = "kedro_repo.__main__:main"

[tool.kedro]
package_name = "kedro_repo"
project_name = "kedro_repo"
kedro_init_version = "0.19.10"
tools = "['None']"
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "kedro_repo.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
